--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -29,6 +29,8 @@ jobs:
             DOCKER_TAG="${GITHUB_REF:10}"
           elif [[ $GITHUB_REF == refs/heads/master ]]; then
             DOCKER_TAG="latest"
+          elif [[ $GITHUB_REF == refs/heads/dev ]]; then
+            DOCKER_TAG="dev"
           else
             DOCKER_TAG="${GITHUB_REF:11}"
           fi
@@ -47,7 +49,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and Push Docker Image
-        if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')
+        if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/tags/')
         id: docker_build
         uses: docker/build-push-action@v2
         with:
@@ -55,4 +57,4 @@ jobs:
           context: .
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64/v8,linux/ppc64le
-          tags: xMamo/VanillaVotifier:${{ steps.tag.outputs.tag }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/vanillavotifier:${{ steps.tag.outputs.tag }}
